Fix spacing of footer elements

--- a/css/style.css
+++ b/css/style.css
@@ -2135,7 +2135,7 @@ html.w-mod-js *[data-ix="slider-title-3"] {
     top: -55px;
   }
   .link {
-    font-size: 13px;
+    font-size: 15px;
   }
   .link.blog-title-link {
     font-size: 15px;
@@ -2184,10 +2184,12 @@ html.w-mod-js *[data-ix="slider-title-3"] {
   .footer-column {
     padding-right: 25px;
     padding-left: 25px;
+    margin-top: 2rem;
   }
   .footer-column.first {
     padding-right: 25px;
     padding-left: 25px;
+    margin-top: 0;
   }
   .page-header-overlay {
     padding: 90px 25px 10px;
@@ -2531,15 +2533,21 @@ html.w-mod-js *[data-ix="slider-title-3"] {
   .footer {
     padding-top: 25px;
     padding-bottom: 25px;
-    font-size: 13px;
+    font-size: 1rem;
     line-height: 19px;
   }
   .bottom-footer-text {
     font-size: 1rem;
   }
+  .footer-column {
+    padding-right: 20px;
+    padding-left: 20px;
+    margin-top: 2rem;
+  }
   .footer-column.first {
     padding-right: 20px;
     padding-left: 20px;
+    margin-top: 0;
   }
   .page-header-overlay {
     padding: 70px 20px 10px;
